cmake_minimum_required(VERSION 3.10)
project(autodiff)
set(CMAKE_CXX_STANDARD 14)

add_executable(autodiff autodiff.cc)
find_package(benchmark REQUIRED)
find_package(Threads REQUIRED)
target_include_directories(autodiff PUBLIC "${BENCHMARK_INCLUDE_DIRS}")
target_link_libraries(autodiff "benchmark ${CMAKE_THREAD_LIBS_INIT}")
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -ffast-math")
set(CMAKE_EXE_LINKER_FLAGS "-Ofast")
